// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index > vite-native callback 1`] = `
{
  "//": {
    "cos-wx-sdk-v5": "^1.7.2",
  },
  "author": "ice breaker <1324318532@qq.com>",
  "bugs": {
    "url": "https://github.com/weapp-vite/weapp-vite/issues",
  },
  "dependencies": {
    "@vant/weapp": "^1.11.7",
    "class-variance-authority": "^0.7.1",
    "clsx": "^2.1.1",
    "dayjs": "^1.11.13",
    "lodash": "^4.17.21",
    "mini-stores": "^2.1.0",
    "miniprogram-computed": "^7.0.0",
    "tdesign-miniprogram": "^1.9.4",
  },
  "description": "",
  "devDependencies": {
    "@vue/language-plugin-pug": "^2.2.10",
    "@weapp-core/shared": "workspace:*",
    "@weapp-tailwindcss/merge": "1.2.1",
    "autoprefixer": "^10.4.21",
    "cos-wx-sdk-v5": "^1.8.0",
    "magic-string": "^0.30.17",
    "miniprogram-api-typings": "latest",
    "miniprogram-simulate": "^1.6.1",
    "postcss": "^8.5.4",
    "sass-embedded": "^1.89.1",
    "sharp": "^0.34.2",
    "svgo": "^3.3.2",
    "tailwindcss": "^3.4.17",
    "typescript": "latest",
    "vite-imagetools": "^7.1.0",
    "vite-plugin-image-optimizer": "^1.1.8",
    "vite-plugin-inspect": "^11.1.0",
    "weapp-tailwindcss": "^4.1.8",
    "weapp-vite": "latest",
  },
  "keywords": [],
  "license": "ISC",
  "main": "index.js",
  "name": "vite-native",
  "private": true,
  "repository": {
    "directory": "apps/vite-native",
    "type": "git",
    "url": "git+https://github.com/weapp-vite/weapp-vite.git",
  },
  "scripts": {
    "build": "weapp-vite build",
    "build-npm": "weapp-vite build-npm",
    "build:debug": "cross-env DEBUG=weapp-vite:* weapp-vite build",
    "build:open": "weapp-vite build --open",
    "dev": "weapp-vite dev",
    "dev:0": "weapp-vite dev -m x",
    "dev:1": "weapp-vite dev --mode xx",
    "dev:debug": "cross-env DEBUG=weapp-vite:* node --inspect-brk node_modules/weapp-vite/bin/weapp-vite.js dev",
    "dev:debug:load-entry": "cross-env DEBUG=weapp-vite:load-entry weapp-vite dev -o",
    "dev:open": "weapp-vite dev -o",
    "dev:prod": "weapp-vite dev -o --mode prod",
    "extract": "tsx scripts/extract.ts",
    "g": "weapp-vite generate",
    "hmr": "tsx ./touch.ts",
    "import-json": "tsx scripts/import-json.ts",
    "inspect": "vite preview --outDir .vite-inspect",
    "npm": "weapp-vite npm",
    "open": "weapp-vite open",
    "postinstall": "weapp-tw patch",
    "wxs": "tsup",
  },
  "type": "module",
  "version": "1.0.1",
}
`;

exports[`index > vite-native callback 2`] = `
{
  "appid": "wx6ffee4673b257014",
  "compileType": "miniprogram",
  "condition": {},
  "editorSetting": {
    "tabIndent": "auto",
    "tabSize": 2,
  },
  "libVersion": "trial",
  "miniprogramRoot": "dist/",
  "packOptions": {
    "ignore": [],
    "include": [],
  },
  "setting": {
    "babelSetting": {
      "disablePlugins": [],
      "ignore": [],
      "outputPath": "",
    },
    "coverView": true,
    "enhance": true,
    "es6": true,
    "minified": true,
    "packNpmManually": true,
    "packNpmRelationList": [
      {
        "miniprogramNpmDistDir": "./dist",
        "packageJsonPath": "./package.json",
      },
    ],
    "postcss": true,
    "showShadowRootInWxmlPanel": true,
  },
  "srcMiniprogramRoot": "dist/",
}
`;

exports[`index > vite-native vite.config.ts 1`] = `
"import { defineConfig } from 'weapp-vite/config'

export default defineConfig({
  weapp: {
    // weapp-vite options
  },
})
"
`;

exports[`index > vite-native-skyline callback 1`] = `
{
  "author": "ice breaker <1324318532@qq.com>",
  "bugs": {
    "url": "https://github.com/weapp-vite/weapp-vite/issues",
  },
  "description": "",
  "devDependencies": {
    "@vant/weapp": "^1.11.7",
    "autoprefixer": "^10.4.21",
    "miniprogram-api-typings": "latest",
    "postcss": "^8.5.4",
    "tailwindcss": "^3.4.17",
    "typescript": "latest",
    "weapp-tailwindcss": "^4.1.8",
    "weapp-vite": "latest",
  },
  "keywords": [],
  "license": "ISC",
  "main": "index.js",
  "name": "vite-native-skyline",
  "private": true,
  "repository": {
    "directory": "apps/vite-native-skyline",
    "type": "git",
    "url": "git+https://github.com/weapp-vite/weapp-vite.git",
  },
  "scripts": {
    "build": "weapp-vite build",
    "build-npm": "weapp-vite build-npm",
    "dev": "weapp-vite dev",
    "dev:open": "weapp-vite dev -o",
    "g": "weapp-vite generate",
    "open": "weapp-vite open",
    "postinstall": "weapp-tw patch",
  },
  "type": "module",
  "version": "1.0.1",
}
`;

exports[`index > vite-native-skyline callback 2`] = `
{
  "appid": "wx6ffee4673b257014",
  "compileType": "miniprogram",
  "condition": {},
  "editorSetting": {
    "tabIndent": "auto",
    "tabSize": 2,
  },
  "libVersion": "trial",
  "miniprogramRoot": "dist/",
  "packOptions": {
    "ignore": [],
    "include": [],
  },
  "setting": {
    "babelSetting": {
      "disablePlugins": [],
      "ignore": [],
      "outputPath": "",
    },
    "coverView": true,
    "enhance": true,
    "es6": true,
    "minified": true,
    "packNpmManually": true,
    "packNpmRelationList": [
      {
        "miniprogramNpmDistDir": "./dist",
        "packageJsonPath": "./package.json",
      },
    ],
    "postcss": true,
    "showShadowRootInWxmlPanel": true,
  },
  "srcMiniprogramRoot": "dist/",
}
`;

exports[`index > vite-native-skyline vite.config.ts 1`] = `
"import { defineConfig } from 'weapp-vite/config'

export default defineConfig({
  weapp: {
    // weapp-vite options
  },
})
"
`;

exports[`index > vite-native-ts callback 1`] = `
{
  "author": "ice breaker <1324318532@qq.com>",
  "bugs": {
    "url": "https://github.com/weapp-vite/weapp-vite/issues",
  },
  "dependencies": {
    "gm-crypto": "^0.1.12",
  },
  "description": "",
  "devDependencies": {
    "miniprogram-api-typings": "latest",
    "typescript": "latest",
    "weapp-vite": "latest",
  },
  "keywords": [],
  "license": "",
  "name": "vite-native-ts",
  "private": true,
  "repository": {
    "directory": "apps/vite-native-ts",
    "type": "git",
    "url": "git+https://github.com/weapp-vite/weapp-vite.git",
  },
  "scripts": {
    "build": "weapp-vite build",
    "build-npm": "weapp-vite build-npm",
    "dev": "weapp-vite dev",
    "dev:open": "weapp-vite dev -o",
    "g": "weapp-vite generate",
    "open": "weapp-vite open",
  },
  "type": "module",
  "version": "1.0.1",
}
`;

exports[`index > vite-native-ts callback 2`] = `
{
  "appid": "wx6ffee4673b257014",
  "compileType": "miniprogram",
  "condition": {},
  "description": "项目配置文件",
  "editorSetting": {
    "tabIndent": "insertSpaces",
    "tabSize": 2,
  },
  "libVersion": "trial",
  "miniprogramRoot": "dist/",
  "packOptions": {
    "ignore": [],
    "include": [],
  },
  "setting": {
    "babelSetting": {
      "disablePlugins": [],
      "ignore": [],
      "outputPath": "",
    },
    "compileHotReLoad": false,
    "coverView": false,
    "enhance": false,
    "es6": false,
    "ignoreUploadUnusedFiles": true,
    "minified": false,
    "packNpmManually": true,
    "packNpmRelationList": [
      {
        "miniprogramNpmDistDir": "./dist",
        "packageJsonPath": "./package.json",
      },
    ],
    "postcss": false,
    "showShadowRootInWxmlPanel": false,
    "skylineRenderEnable": true,
    "useCompilerPlugins": [
      "typescript",
    ],
  },
  "simulatorPluginLibVersion": {},
  "simulatorType": "wechat",
  "srcMiniprogramRoot": "dist/",
}
`;

exports[`index > vite-native-ts vite.config.ts 1`] = `
"import { defineConfig } from 'weapp-vite/config'

export default defineConfig({
  weapp: {
    // weapp-vite options
  },
})
"
`;

exports[`index > vite-native-ts-skyline callback 1`] = `
{
  "author": "ice breaker <1324318532@qq.com>",
  "bugs": {
    "url": "https://github.com/weapp-vite/weapp-vite/issues",
  },
  "dependencies": {
    "tdesign-miniprogram": "^1.9.4",
  },
  "description": "",
  "devDependencies": {
    "autoprefixer": "^10.4.21",
    "miniprogram-api-typings": "latest",
    "postcss": "^8.5.4",
    "tailwindcss": "^3.4.17",
    "typescript": "latest",
    "weapp-tailwindcss": "^4.1.8",
    "weapp-vite": "latest",
  },
  "keywords": [],
  "license": "",
  "name": "vite-native-ts-skyline",
  "private": true,
  "repository": {
    "directory": "apps/vite-native-ts-skyline",
    "type": "git",
    "url": "git+https://github.com/weapp-vite/weapp-vite.git",
  },
  "scripts": {
    "build": "weapp-vite build",
    "build-npm": "weapp-vite build-npm",
    "dev": "weapp-vite dev",
    "dev:open": "weapp-vite dev -o",
    "g": "weapp-vite generate",
    "open": "weapp-vite open",
    "postinstall": "weapp-tw patch",
  },
  "type": "module",
  "version": "1.0.1",
}
`;

exports[`index > vite-native-ts-skyline callback 2`] = `
{
  "appid": "wx6ffee4673b257014",
  "compileType": "miniprogram",
  "condition": {},
  "description": "项目配置文件",
  "editorSetting": {
    "tabIndent": "insertSpaces",
    "tabSize": 2,
  },
  "libVersion": "trial",
  "miniprogramRoot": "dist/",
  "packOptions": {
    "ignore": [],
    "include": [],
  },
  "setting": {
    "babelSetting": {
      "disablePlugins": [],
      "ignore": [],
      "outputPath": "",
    },
    "compileHotReLoad": false,
    "coverView": false,
    "enhance": true,
    "es6": true,
    "ignoreUploadUnusedFiles": true,
    "minified": false,
    "packNpmManually": true,
    "packNpmRelationList": [
      {
        "miniprogramNpmDistDir": "./dist",
        "packageJsonPath": "./package.json",
      },
    ],
    "postcss": false,
    "showShadowRootInWxmlPanel": false,
    "skylineRenderEnable": true,
    "useCompilerPlugins": [
      "typescript",
    ],
  },
  "simulatorPluginLibVersion": {},
  "simulatorType": "wechat",
  "srcMiniprogramRoot": "dist/",
}
`;

exports[`index > vite-native-ts-skyline vite.config.ts 1`] = `
"import { defineConfig } from 'weapp-vite/config'

export default defineConfig({
  weapp: {
    // weapp-vite options
  },
})
"
`;
